[project]
name = "building-llm-applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "notebook>=7.6.0",
    "openai>=2.43.0",
    "tiktoken>=0.13.0",
]
